@@ -26,7 +26,7 @@ import org.unitime.timetable.model.base.BaseClassInstructor;
 /**
  * @author Stephanie Schluttenhofer, Tomas Muller
  */
-public class ClassInstructor extends BaseClassInstructor implements Comparable {
+public class ClassInstructor extends BaseClassInstructor implements Comparable<ClassInstructor> {
 	private static final long serialVersionUID = 1L;
 
 /*[CONSTRUCTOR MARKER BEGIN]*/
@@ -59,12 +59,12 @@ public class ClassInstructor extends BaseClassInstructor implements Comparable {
 		}
 	}
 
-    public int compareTo(Object o) {
+    public int compareTo(ClassInstructor o) {
         if (o==null || !(o instanceof ClassInstructor)) return -1;
         ClassInstructor i = (ClassInstructor)o;
         int cmp = nameLastNameFirst().compareToIgnoreCase(i.nameLastNameFirst());
         if (cmp!=0) return cmp;
-        return (getUniqueId() == null ? new Long(-1) : getUniqueId()).compareTo(i.getUniqueId() == null ? -1 : i.getUniqueId());
+        return (getUniqueId() == null ? Long.valueOf(-1) : getUniqueId()).compareTo(i.getUniqueId() == null ? -1 : i.getUniqueId());
     }
     
     public String toString(){
